include TFLiteMicro dependency

--- a/Notebooks/ProvaYOLO.ipynb
+++ b/Notebooks/ProvaYOLO.ipynb
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "id": "1j22semIVEhS"
       },
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -288,28 +288,30 @@
             "formato dell'input: <class 'numpy.float32'>\n",
             "formato output: <class 'numpy.float32'>\n",
             "\n",
-            "Formato dei primi 5 tensori:\n",
-            "Tensore 0: images - Dtype: <class 'numpy.float32'> - Shape: [  1 640 640   3]\n",
-            "Tensore 1: arith.constant - Dtype: <class 'numpy.int32'> - Shape: [4 2]\n",
-            "Tensore 2: arith.constant1 - Dtype: <class 'numpy.float16'> - Shape: [   1    2 8400]\n",
+            "Formato del tensore:\n",
+            "Tensore: images - Dtype: <class 'numpy.float32'> - Shape: [  1 640 640   3]\n",
             "Original image size: 640x480\n",
-            "Immagine preprocessata salvata come: Foto/example2_preprocessed.jpg\n",
-            "Output inferenza: [[[  0.0060906    0.026556    0.037698 ...     0.79076     0.83317     0.88974]\n",
-            "  [  0.0090692   0.0061092   0.0053846 ...     0.94134     0.94161     0.94369]\n",
-            "  [   0.013994    0.051219    0.074031 ...     0.40976     0.32766      0.2217]\n",
+            "Immagine preprocessata salvata come: Foto/lastExample_preprocessed.jpg\n",
+            "Output inferenza: [[[6.2515810e-03 2.6880641e-02 3.7892532e-02 ... 8.0189681e-01\n",
+            "   8.5269725e-01 8.9448059e-01]\n",
+            "  [9.9672945e-03 6.1756298e-03 5.2996241e-03 ... 9.4070023e-01\n",
+            "   9.4120586e-01 9.4356644e-01]\n",
+            "  [1.4315648e-02 5.1900610e-02 7.4399807e-02 ... 3.8823098e-01\n",
+            "   2.8881580e-01 2.1242070e-01]\n",
             "  ...\n",
-            "  [ 5.5984e-07  2.3214e-07  2.6116e-07 ...  3.1107e-06  3.1321e-06  3.8057e-06]\n",
-            "  [ 2.2179e-07  1.5401e-07  1.8708e-07 ...  2.1496e-06  2.0725e-06  2.3471e-06]\n",
-            "  [ 2.7891e-07   1.893e-07   2.425e-07 ...  1.8006e-06  1.7109e-06  2.0391e-06]]]\n",
-            "Valore massimo nell'output: 0.9957919120788574\n",
-            "Valore minimo nell'output: 5.095758884299251e-11\n",
-            "Valore massimo per classe 'person': 0.0001915383036248386\n",
-            "✅ Trovate 4 persona/e nell'immagine:\n",
-            "   Persona 1: Bounding box (509, 424, 639, 506) - Confidence: 0.000\n",
-            "   Persona 2: Bounding box (0, 170, 81, 422) - Confidence: 0.000\n",
-            "   Persona 3: Bounding box (250, 215, 637, 507) - Confidence: 0.000\n",
-            "   Persona 4: Bounding box (436, 371, 639, 506) - Confidence: 0.000\n",
-            "Immagine con bounding box salvata come: Foto/example2_preprocessed_with_boxes.jpg\n"
+            "  [5.9165160e-07 2.4813767e-07 2.8241976e-07 ... 2.2594493e-06\n",
+            "   2.1413471e-06 2.8348343e-06]\n",
+            "  [2.4568479e-07 1.7480276e-07 2.1675237e-07 ... 1.9346701e-06\n",
+            "   1.9450486e-06 2.1211097e-06]\n",
+            "  [3.0807601e-07 2.1178744e-07 2.8193563e-07 ... 1.6904663e-06\n",
+            "   1.6786232e-06 1.9656279e-06]]]\n",
+            "Valore massimo nell'output: 0.9947457909584045\n",
+            "Valore minimo nell'output: 9.374459854048484e-20\n",
+            "Valore massimo per classe 'person': 0.0001433247816748917\n",
+            "✅ Trovate 2 persona/e nell'immagine:\n",
+            "   Persona 1: Bounding box (0, 246, 170, 514) - Confidence: 0.000\n",
+            "   Persona 2: Bounding box (128, 225, 546, 556) - Confidence: 0.000\n",
+            "Immagine con bounding box salvata come: Foto/lastExample_preprocessed_with_boxes.jpg\n"
           ]
         }
       ],
@@ -321,9 +323,9 @@
         "\n",
         "#parametri modificabili per esperimenti\n",
         "nomeModello = \"Modelli/Utili/yolo11n_float16.tflite\"\n",
-        "nomeImmagine = \"Foto/example2\"\n",
-        "confidence_threshold = 0.000001 #confidence in base a cui detecti o meno qualcosa\n",
-        "iou_confidence = 0.5 #Intersection over Union, più è alto e più le bounding box contenute da altre, non sono considerate\n",
+        "nomeImmagine = \"Foto/lastExample\"\n",
+        "confidence_threshold = 0.0000001 #confidence in base a cui detecti o meno qualcosa\n",
+        "iou_confidence = 0.5 #Intersection over Union, più è basso e più le bounding box contenute da altre, non sono considerate\n",
         "\n",
         "\n",
         "\n",
@@ -343,11 +345,10 @@
         "print(\"formato output:\", output_details[0]['dtype'])\n",
         "\n",
         "\n",
-        "# Stampa i primi 5 tensori per vedere i formati dei pesi\n",
+        "# Stampa un tensore per vedere i formati dei pesi\n",
         "tensor_details = interpreter.get_tensor_details()\n",
-        "print(\"\\nFormato dei primi 5 tensori:\")\n",
-        "for i, tensor in enumerate(tensor_details[:3]):\n",
-        "    print(f\"Tensore {i}: {tensor['name']} - Dtype: {tensor['dtype']} - Shape: {tensor['shape']}\")\n",
+        "print(\"\\nFormato del tensore:\")\n",
+        "print(f\"Tensore: {tensor_details[0]['name']} - Dtype: {tensor_details[0]['dtype']} - Shape: {tensor_details[0]['shape']}\")\n",
         "\n",
         "\n",
         "# --- Carica e preprocessa immagine ---\n",
