removed mobileNet, trying to focus on YOLO

--- a/Notebooks/ProvaYOLO.ipynb
+++ b/Notebooks/ProvaYOLO.ipynb
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -745,28 +745,18 @@
             "formato output: <class 'numpy.int8'>\n",
             "\n",
             "Formato del tensore:\n",
-            "Tensore: serving_default_images:0 - Dtype: <class 'numpy.int8'> - Shape: [  1 640 640   3]\n",
-            "Original image size: 481x640\n",
-            "Immagine preprocessata salvata come: Foto/example4_preprocessed.jpg\n",
-            "Quantizzazione input: scale=0.003921568859368563, zero_point=-128\n",
-            "Input quantizzato da float32 a int8\n",
-            "Output PRIMA della dequantizzazione:\n",
-            "Tipo: int8\n",
-            "Valore massimo: 125\n",
-            "Valore minimo: -124\n",
-            "Dequantizzazione output: scale=0.003987358883023262, zero_point=-124\n",
-            "Output dequantizzato da int8 a float32\n",
-            "Output DOPO la dequantizzazione:\n",
-            "Tipo: float64\n",
-            "Valore massimo: 0.9928523618727922\n",
-            "Valore minimo: 0.0\n",
-            "Classe 'person' (indice 5) - Valore massimo: 0.0\n",
-            "Classe 'person' (indice 5) - Valore minimo: 0.0\n",
-            "Valore massimo nell'output: 0.9928523618727922\n",
-            "Valore minimo nell'output: 0.0\n",
-            "Valore massimo per classe 'person': 0.0\n",
-            "❌ Nessuna persona rilevata nell'immagine\n",
-            "Nessuna bounding box da disegnare\n"
+            "Tensore: serving_default_images:0 - Dtype: <class 'numpy.int8'> - Shape: [  1 640 640   3]\n"
+          ]
+        },
+        {
+          "ename": "NameError",
+          "evalue": "name 'preprocess_image' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[2], line 42\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# --- Carica e preprocessa immagine ---\u001b[39;00m\n\u001b[1;32m     41\u001b[0m nomeImmagineJpg\u001b[38;5;241m=\u001b[39m nomeImmagine \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 42\u001b[0m input_data \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocess_image\u001b[49m(nomeImmagineJpg)\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m# SE IL MODELLO SI ASPETTA INT8, CONVERTI DA FLOAT32! \u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m input_details[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m np\u001b[38;5;241m.\u001b[39mint8:\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;66;03m# Ottieni i parametri di quantizzazione dell'input\u001b[39;00m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'preprocess_image' is not defined"
           ]
         }
       ],
@@ -1100,7 +1090,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -1127,6 +1117,19 @@
             "- STRIDED_SLICE\n",
             "- SUB\n",
             "- TRANSPOSE\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/alessioprato/Desktop/Tesi Nuova/ESP32CAM_ESPIDF/Notebooks/.venv/lib/python3.10/site-packages/tensorflow/lite/python/interpreter.py:457: UserWarning:     Warning: tf.lite.Interpreter is deprecated and is scheduled for deletion in\n",
+            "    TF 2.20. Please use the LiteRT interpreter from the ai_edge_litert package.\n",
+            "    See the [migration guide](https://ai.google.dev/edge/litert/migration)\n",
+            "    for details.\n",
+            "    \n",
+            "  warnings.warn(_INTERPRETER_DELETION_WARNING)\n",
+            "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
           ]
         }
       ],
