--- a/Notebooks/EsperimentiYOLO.ipynb
+++ b/Notebooks/EsperimentiYOLO.ipynb
@@ -15,7 +15,7 @@
         "print(\"Python version:\", sys.version)\n",
         "\n",
         "#Carica il modello preaddestrato più piccolo\n",
-        "model = YOLO(\"yolo11n.pt\")\n",
+        "model = YOLO(\"yolo11l.pt\")\n",
         "\n",
         "# Esporta in formato TFLite quantizzato \n",
         "model.export(format='tflite', int8=True)"
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "1j22semIVEhS"
       },
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -105,7 +105,7 @@
         "    Post-processing per rilevare persone nell'immagine\n",
         "    \"\"\"\n",
         "    # COCO class ID per 'person' è 0\n",
-        "    PERSON_CLASS_ID = 0\n",
+        "    PERSON_CLASS_ID = 0 #dovrebbe essere 0 di default\n",
         "    \n",
         "    # Estrai le predizioni (rimuovi dimensione batch)\n",
         "    predictions = output_data[0]  # Shape: (84, 8400)\n",
@@ -113,7 +113,7 @@
         "    # Separa coordinate, confidence e classi\n",
         "    # Ogni colonna: [x, y, w, h, confidence, class1, class2, ..., class80]\n",
         "    boxes = predictions[:4, :].T  # (8400, 4) - coordinate relative\n",
-        "    confidences = predictions[4, :]  # (8400,) - confidence scores\n",
+        "    confidences = predictions[29, :]  # (8400,) - confidence scores\n",
         "    class_scores = predictions[5:, :].T  # (8400, 79) - class scores\n",
         "    \n",
         "    # Trova le detections per la classe 'person'\n",
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 153,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -252,7 +252,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Riscriviamo a mano la cella di inferenza"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 170,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -267,23 +276,19 @@
           "output_type": "stream",
           "text": [
             "Dettagli input modello: [{'name': 'images', 'index': 0, 'shape': array([  1, 640, 640,   3], dtype=int32), 'shape_signature': array([  1, 640, 640,   3], dtype=int32), 'dtype': <class 'numpy.float32'>, 'quantization': (0.0, 0), 'quantization_parameters': {'scales': array([], dtype=float32), 'zero_points': array([], dtype=int32), 'quantized_dimension': 0}, 'sparsity_parameters': {}}]\n",
-            "Dettagli output modello: [{'name': 'Identity', 'index': 591, 'shape': array([   1,   84, 8400], dtype=int32), 'shape_signature': array([   1,   84, 8400], dtype=int32), 'dtype': <class 'numpy.float32'>, 'quantization': (0.0, 0), 'quantization_parameters': {'scales': array([], dtype=float32), 'zero_points': array([], dtype=int32), 'quantized_dimension': 0}, 'sparsity_parameters': {}}]\n",
+            "Dettagli output modello: [{'name': 'Identity', 'index': 10702, 'shape': array([   1,   84, 8400], dtype=int32), 'shape_signature': array([   1,   84, 8400], dtype=int32), 'dtype': <class 'numpy.float32'>, 'quantization': (0.0, 0), 'quantization_parameters': {'scales': array([], dtype=float32), 'zero_points': array([], dtype=int32), 'quantized_dimension': 0}, 'sparsity_parameters': {}}]\n",
             "formato dell'input: <class 'numpy.float32'>\n",
             "formato output: <class 'numpy.float32'>\n",
-            "\n",
-            "Formato del tensore:\n",
-            "Tensore: images - Dtype: <class 'numpy.float32'> - Shape: [  1 640 640   3]\n",
-            "Original image size: 481x640\n",
-            "Immagine preprocessata salvata come: Foto/example4_preprocessed.jpg\n",
-            "Total tensor bytes used: 0\n",
-            "Classe 'person' (indice 5) - Valore massimo: 7.573167385999113e-05\n",
-            "Classe 'person' (indice 5) - Valore minimo: 5.569134042815449e-11\n",
-            "Valore massimo nell'output: 0.995031476020813\n",
-            "Valore minimo nell'output: 3.821563842083147e-16\n",
-            "Valore massimo per classe 'person': 7.573167385999113e-05\n",
-            "✅ Trovate 1 persona/e nell'immagine:\n",
-            "   Persona 1: Bounding box (175, 159, 479, 639) - Confidence: 0.000\n",
-            "Immagine con bounding box salvata come: Foto/example4_preprocessed_with_boxes.jpg\n"
+            "Original image size: 640x480\n",
+            "Immagine preprocessata salvata come: Foto/example_preprocessed.jpg\n",
+            "Valore massimo nell'output: 0.9958502650260925\n",
+            "Valore minimo nell'output: 5.9003391061907e-10\n",
+            "Valore massimo per classe 'person': 0.00017405439575668424\n",
+            "✅ Trovate 3 persona/e nell'immagine:\n",
+            "   Persona 1: Bounding box (0, 210, 17, 248) - Confidence: 0.000\n",
+            "   Persona 2: Bounding box (14, 1, 627, 68) - Confidence: 0.000\n",
+            "   Persona 3: Bounding box (236, 459, 639, 557) - Confidence: 0.000\n",
+            "Immagine con bounding box salvata come: Foto/example_preprocessed_with_boxes.jpg\n"
           ]
         }
       ],
@@ -295,16 +300,17 @@
         "\n",
         "#parametri modificabili per esperimenti\n",
         "\n",
-        "#nomeModello = \"Modelli/yolo11n_full_integer_quant.tflite\"\n",
-        "#nomeModello = \"Modelli/yolo11n_integer_quant.tflite\"\n",
-        "#nomeModello = \"Modelli/yolo11n_int8.tflite\"\n",
+        "\n",
         "#nomeModello = \"Modelli/Utili/yolo11n_int8.tflite\"\n",
-        "nomeModello = \"Modelli/Utili/yolo11n_float32.tflite\"\n",
-        "nomeImmagine = \"Foto/example4\"\n",
-        "confidence_threshold = 0.000001 #confidence in base a cui detecti o meno qualcosa\n",
+        "#nomeModello = \"Modelli/Utili/yolo11n_float32.tflite\"\n",
+        "nomeModello = \"Modelli/Utili/yolo11l_float32.tflite\"\n",
+        "#nomeModello = \"Modelli/Utili/yolo11n_float16.tflite\"\n",
+        "#nomeModello = \"yolo11n_int8personal.tflite\"\n",
+        "nomeImmagine = \"Foto/example\"\n",
+        "confidence_threshold = 0.000000001 #confidence in base a cui detecti o meno qualcosa\n",
         "iou_confidence = 0.1 #Intersection over Union, più è basso e più le bounding box contenute da altre, non sono considerate\n",
         "\n",
-        "# Carica il modello quantizzato\n",
+        "# Carica il modello\n",
         "interpreter = tf.lite.Interpreter(model_path=nomeModello)\n",
         "interpreter.allocate_tensors()\n",
         "\n",
@@ -319,16 +325,22 @@
         "print(\"formato dell'input:\", input_details[0]['dtype'])\n",
         "print(\"formato output:\", output_details[0]['dtype'])\n",
         "\n",
-        "\n",
-        "# Stampa un tensore per vedere i formati dei pesi\n",
-        "tensor_details = interpreter.get_tensor_details()\n",
-        "print(\"\\nFormato del tensore:\")\n",
-        "print(f\"Tensore: {tensor_details[0]['name']} - Dtype: {tensor_details[0]['dtype']} - Shape: {tensor_details[0]['shape']}\")\n",
-        "\n",
-        "\n",
         "# --- Carica e preprocessa immagine ---\n",
         "nomeImmagineJpg= nomeImmagine + \".jpg\"\n",
         "input_data = preprocess_image(nomeImmagineJpg)\n",
+        "\n",
+        "# --- QUANTIZZAZIONE INPUT ---\n",
+        "if input_details[0]['dtype'] == np.int8:\n",
+        "    # Ottieni i parametri di quantizzazione dell'input\n",
+        "    quantization_params = input_details[0]['quantization_parameters']\n",
+        "    scale = quantization_params['scales'][0]\n",
+        "    zero_point = quantization_params['zero_points'][0]\n",
+        "    \n",
+        "    print(f\"Quantizzazione input: scale={scale}, zero_point={zero_point}\")\n",
+        "    \n",
+        "    # Quantizza l'input da float32 a int8\n",
+        "    input_data = np.round(input_data / scale + zero_point).astype(np.int8)\n",
+        "    print(\"Input quantizzato da float32 a int8\")\n",
         "\n",
         "# --- Imposta tensore input ---\n",
         "interpreter.set_tensor(input_details[0]['index'], input_data)\n",
@@ -338,9 +350,6 @@
         "\n",
         "# --- Ottieni output ---\n",
         "output_data = interpreter.get_tensor(output_details[0]['index'])\n",
-        "\n",
-        "total_bytes = sum([t['tensor'].nbytes for t in tensor_details if 'tensor' in t])\n",
-        "print(\"Total tensor bytes used:\", total_bytes)\n",
         "\n",
         "# --- DEQUANTIZZAZIONE AUTOMATICA ---\n",
         "if output_details[0]['dtype'] == np.int8:\n",
@@ -355,25 +364,18 @@
         "    output_data = (output_data.astype(np.float32) - zero_point) * scale\n",
         "    print(\"Output dequantizzato da int8 a float32\")\n",
         "\n",
-        "\n",
-        "\n",
-        "# Controlla specificamente l'indice 5\n",
-        "predictions = output_data[0]\n",
-        "person_scores = predictions[5, :]\n",
-        "print(f\"Classe 'person' (indice 5) - Valore massimo: {np.max(person_scores)}\")\n",
-        "print(f\"Classe 'person' (indice 5) - Valore minimo: {np.min(person_scores)}\")\n",
-        "\n",
-        "#print(\"Output inferenza:\", output_data)\n",
-        "\n",
+        "# Esperimenti sull'output a mano.\n",
+        "predictions = output_data[0] #output completo del modello\n",
         "# Dopo aver ottenuto output_data\n",
         "max_score = np.max(output_data)\n",
-        "min_score = np.min(output_data)\n",
+        "min_score = np.min(output_data) \n",
         "print(f\"Valore massimo nell'output: {max_score}\")\n",
         "print(f\"Valore minimo nell'output: {min_score}\")\n",
         "\n",
+        "\n",
         "# Verifica i valori per la classe 'person'\n",
         "predictions = output_data[0]\n",
-        "person_scores = predictions[5, :]  # Classe 'person' (indice 5)\n",
+        "person_scores = predictions[5, :]  # era indice 5\n",
         "max_person_score = np.max(person_scores)\n",
         "print(f\"Valore massimo per classe 'person': {max_person_score}\")\n",
         "\n",
@@ -390,28 +392,111 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "id": "nuoge14geq0R",
-        "outputId": "51339f98-8c35-494c-b0f9-aceebd9768a2"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "#CALIBRAZIONE E QUANTIZZAZIONE INT8\n",
+        "#Ridimensionamento delle immagini del dataset di calibrazione da 640x480 a 640x640\n",
+        "import os\n",
+        "import cv2\n",
+        "\n",
+        "input_folder = \"immagini_calibrazione640x480\"\n",
+        "output_folder = \"immagini_ridimensionate640x640\"\n",
+        "os.makedirs(output_folder, exist_ok=True)\n",
+        "\n",
+        "for filename in os.listdir(input_folder):\n",
+        "    if filename.lower().endswith(\".jpg\"):\n",
+        "        img_path = os.path.join(input_folder, filename)\n",
+        "        img = cv2.imread(img_path)  # dovrebbe essere 640x480\n",
+        "\n",
+        "        if img is None:\n",
+        "            print(f\"Impossibile leggere {filename}\")\n",
+        "            continue\n",
+        "        \n",
+        "        h, w, _ = img.shape\n",
+        "        # Crop centrale quadrato 480x480\n",
+        "        side = min(h, w)  # 480\n",
+        "        start_x = (w - side) // 2  # (640-480)/2=80\n",
+        "        start_y = (h - side) // 2  # (480-480)/2=0\n",
+        "\n",
+        "        img_cropped = img[start_y:start_y+side, start_x:start_x+side]\n",
+        "\n",
+        "        # Resize a 640x640\n",
+        "        img_resized = cv2.resize(img_cropped, (640, 640))\n",
+        "\n",
+        "        output_path = os.path.join(output_folder, filename)\n",
+        "        cv2.imwrite(output_path, img_resized)\n",
+        "\n",
+        "        print(f\"Elaborata {filename}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "W0000 00:00:1754471551.205323 6422266 tf_tfl_flatbuffer_helpers.cc:365] Ignored output_format.\n",
+            "W0000 00:00:1754471551.206203 6422266 tf_tfl_flatbuffer_helpers.cc:368] Ignored drop_control_dependency.\n",
+            "2025-08-06 11:12:31.209411: I tensorflow/cc/saved_model/reader.cc:83] Reading SavedModel from: yolo11n_saved_model\n",
+            "2025-08-06 11:12:31.215852: I tensorflow/cc/saved_model/reader.cc:52] Reading meta graph with tags { serve }\n",
+            "2025-08-06 11:12:31.215875: I tensorflow/cc/saved_model/reader.cc:147] Reading SavedModel debug info (if present) from: yolo11n_saved_model\n",
+            "2025-08-06 11:12:31.257055: I tensorflow/cc/saved_model/loader.cc:236] Restoring SavedModel bundle.\n",
+            "2025-08-06 11:12:31.360434: I tensorflow/cc/saved_model/loader.cc:220] Running initialization op on SavedModel bundle at path: yolo11n_saved_model\n",
+            "2025-08-06 11:12:31.410747: I tensorflow/cc/saved_model/loader.cc:471] SavedModel load for tags { serve }; Status: success: OK. Took 201555 microseconds.\n",
+            "2025-08-06 11:12:31.874916: I tensorflow/compiler/mlir/lite/flatbuffer_export.cc:4061] Estimated count of arithmetic ops: 7.648 G  ops, equivalently 3.824 G  MACs\n",
+            "fully_quantize: 0, inference_type: 6, input_inference_type: INT8, output_inference_type: INT8\n",
+            "2025-08-06 11:14:47.203876: I tensorflow/compiler/mlir/lite/flatbuffer_export.cc:4061] Estimated count of arithmetic ops: 7.648 G  ops, equivalently 3.824 G  MACs\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "✅ Modello quantizzato salvato come yolo11n_int8personal.tflite\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Quantizzazione del modello YOLO11n in int8, con dataset di calibrazione\n",
         "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "import cv2\n",
+        "import os\n",
         "\n",
-        "converter = tf.lite.TFLiteConverter.from_saved_model(\"yolo11n_saved_model\")\n",
+        "# === Dataset di calibrazione ===\n",
+        "def representative_dataset_gen():\n",
+        "    folder = 'immagini_ridimensionate640x640'  # la cartella con le immagini 640x640\n",
+        "    image_paths = [os.path.join(folder, f) for f in os.listdir(folder) if f.lower().endswith(('.jpg', '.jpeg', '.png'))]\n",
+        "    for path in image_paths:\n",
+        "        img = cv2.imread(path)\n",
+        "        img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+        "        img = img.astype(np.float32) / 255.0         # Normalizzazione [0, 1]\n",
+        "        img = np.expand_dims(img, axis=0)            # (1, 640, 640, 3)\n",
+        "        yield [img]\n",
+        "\n",
+        "# === Conversione del modello ===\n",
+        "saved_model_dir = \"yolo11n_saved_model\"  # percorso del modello saved_model\n",
+        "\n",
+        "converter = tf.lite.TFLiteConverter.from_saved_model(saved_model_dir)\n",
         "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
+        "converter.representative_dataset = representative_dataset_gen\n",
         "converter.target_spec.supported_ops = [tf.lite.OpsSet.TFLITE_BUILTINS_INT8]\n",
-        "converter.inference_input_type = tf.uint8\n",
-        "converter.inference_output_type = tf.uint8\n",
-        "tflite_model = converter.convert()\n",
         "\n",
-        "with open(\"model_int8.tflite\", \"wb\") as f:\n",
-        "    f.write(tflite_model)\n"
+        "# Imposto input e output in INT8 perché è quantizzazione full int8\n",
+        "converter.inference_input_type = tf.int8\n",
+        "converter.inference_output_type = tf.int8\n",
+        "\n",
+        "tflite_quant_model = converter.convert()\n",
+        "\n",
+        "# === Salvataggio ===\n",
+        "output_path = \"yolo11n_int8personal.tflite\"\n",
+        "with open(output_path, \"wb\") as f:\n",
+        "    f.write(tflite_quant_model)\n",
+        "\n",
+        "print(f\"✅ Modello quantizzato salvato come {output_path}\")\n"
       ]
     },
     {
