Initialized yolo11n.espdl in esp32, trying to do inference

--- a/Notebooks/EsperimentiYOLO2.ipynb
+++ b/Notebooks/EsperimentiYOLO2.ipynb
@@ -95,42 +95,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "47592567",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Usiamo la libreria ultralytics per fare inferenza con YOLO11n\n",
-    "from ultralytics import YOLO\n",
-    "\n",
-    "# Load a model\n",
-    "model = YOLO(\"yolov8n.pt\") #esporta in .pt"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "24c93bc5",
+   "id": "47592567",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "images\n",
-      "Input shape: [1, 3, 640, 640]\n"
+      "PRO TIP 💡 Replace 'model=yolov5n.pt' with new 'model=yolov5nu.pt'.\n",
+      "YOLOv5 'u' models are trained with https://github.com/ultralytics/ultralytics and feature improved performance vs standard YOLOv5 models trained with https://github.com/ultralytics/yolov5.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolov5nu.pt to 'yolov5nu.pt': 100%|██████████| 5.31M/5.31M [00:00<00:00, 42.2MB/s]\n"
      ]
     }
    ],
    "source": [
-    "#verifica dimensione input del modello\n",
-    "import onnx\n",
+    "#Usiamo la libreria ultralytics per fare inferenza con YOLO11n\n",
+    "from ultralytics import YOLO\n",
     "\n",
-    "model = onnx.load(\"yolov8n.onnx\")\n",
-    "for input in model.graph.input:\n",
-    "    print(input.name)\n",
-    "    shape = [dim.dim_value for dim in input.type.tensor_type.shape.dim]\n",
-    "    print(\"Input shape:\", shape)\n"
+    "# Load a model\n",
+    "model = YOLO(\"yolo11n.pt\") #esporta in .pt"
    ]
   },
   {
@@ -168,14 +159,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#quantizzazione del modello che non funziona\n",
+    "#quantizzazione del modello int int8 .espdl\n",
     "import sys, os\n",
     "import esp_ppq\n",
-    "#sys.path.append(os.path.abspath(\"esp-detection\"))\n",
+    "sys.path.append(os.path.abspath(\"esp-detection\"))\n",
     "from deploy.quantize import quant_espdet\n",
-    "\n",
-    "import onnx\n",
-    "from onnxsim import simplify\n",
     "\n",
     "quant_espdet(\n",
     "    onnx_path=\"yolo11n.onnx\",      # onnx appena esportato\n",
@@ -184,9 +172,167 @@
     "    device='cpu',\n",
     "    batchsz=1,\n",
     "    imgsz=[640, 640],              # deve combaciare con la dimensione del modello\n",
-    "    calib_dir=\"../../Calibrazione/immagini_ridimensionate640x640/\",        #  cartella immagini reali\n",
+    "    calib_dir=\"../../calibrazione_espressif/\",        #  cartella immagini reali\n",
     "    espdl_model_path=\"yolo11n.espdl\"\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19c38eef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export ONNX di espressif\n",
+    "\n",
+    "from ultralytics import YOLO\n",
+    "from ultralytics.nn.modules import Detect, Attention\n",
+    "from ultralytics.engine.exporter import Exporter, try_export, arange_patch\n",
+    "from ultralytics.utils import LOGGER, __version__, colorstr\n",
+    "from ultralytics.utils.checks import check_requirements\n",
+    "from ultralytics.utils.torch_utils import get_latest_opset\n",
+    "import torch\n",
+    "import onnx\n",
+    "\n",
+    "\n",
+    "class ESP_Detect(Detect):\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"Returns predicted bounding boxes and class probabilities respectively.\"\"\"\n",
+    "        # self.nl = 3\n",
+    "        box0 = self.cv2[0](x[0])\n",
+    "        score0 = self.cv3[0](x[0])\n",
+    "\n",
+    "        box1 = self.cv2[1](x[1])\n",
+    "        score1 = self.cv3[1](x[1])\n",
+    "\n",
+    "        box2 = self.cv2[2](x[2])\n",
+    "        score2 = self.cv3[2](x[2])\n",
+    "\n",
+    "        return box0, score0, box1, score1, box2, score2\n",
+    "\n",
+    "\n",
+    "class ESP_Attention(Attention):\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward pass of the Attention module.\n",
+    "\n",
+    "        Args:\n",
+    "            x (torch.Tensor): The input tensor.\n",
+    "\n",
+    "        Returns:\n",
+    "            (torch.Tensor): The output tensor after self-attention.\n",
+    "        \"\"\"\n",
+    "        B, C, H, W = x.shape\n",
+    "        N = H * W\n",
+    "        qkv = self.qkv(x)\n",
+    "        q, k, v = qkv.view(\n",
+    "            -1, self.num_heads, self.key_dim * 2 + self.head_dim, N\n",
+    "        ).split([self.key_dim, self.key_dim, self.head_dim], dim=2)\n",
+    "        attn = (q.transpose(-2, -1) @ k) * self.scale\n",
+    "        attn = attn.softmax(dim=-1)\n",
+    "        x = (v @ attn.transpose(-2, -1)).view(-1, C, H, W) + self.pe(\n",
+    "            v.reshape(-1, C, H, W)\n",
+    "        )\n",
+    "        x = self.proj(x)\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "class ESP_Detect_Exporter(Exporter):\n",
+    "    \"\"\"\n",
+    "    adapted from ultralytics for detection task\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @try_export\n",
+    "    def export_onnx(self, prefix=colorstr(\"ONNX:\")):\n",
+    "        \"\"\"YOLO ONNX export.\"\"\"\n",
+    "        requirements = [\"onnx>=1.14.0\"]  # from esp-ppq requirments.txt\n",
+    "        # since onnxslim will cause NCHW -> 1(N*C)HW in yolo11, we replace onnxslim with onnxsim\n",
+    "        if self.args.simplify:\n",
+    "            requirements += [\n",
+    "                \"onnxsim\",\n",
+    "                \"onnxruntime\" + (\"-gpu\" if torch.cuda.is_available() else \"\"),\n",
+    "            ]\n",
+    "        check_requirements(requirements)\n",
+    "\n",
+    "        opset_version = self.args.opset or get_latest_opset()\n",
+    "        LOGGER.info(\n",
+    "            f\"\\n{prefix} starting export with onnx {onnx.__version__} opset {opset_version}...\"\n",
+    "        )\n",
+    "        f = str(self.file.with_suffix(\".onnx\"))\n",
+    "        output_names = [\"box0\", \"score0\", \"box1\", \"score1\", \"box2\", \"score2\"]\n",
+    "        dynamic = (\n",
+    "            self.args.dynamic\n",
+    "        )  # case 1: deploy model on ESP32, dynamic=False; case 2: QAT gt onnx for inference, dynamic=True\n",
+    "        if dynamic:\n",
+    "            dynamic = {\"images\": {0: \"batch\"}}\n",
+    "            for name in output_names:\n",
+    "                dynamic[name] = {0: \"batch\"}\n",
+    "\n",
+    "        with arange_patch(self.args):\n",
+    "            torch.onnx.export(\n",
+    "                self.model,\n",
+    "                self.im,\n",
+    "                f,\n",
+    "                verbose=False,\n",
+    "                opset_version=opset_version,\n",
+    "                do_constant_folding=False,\n",
+    "                input_names=[\"images\"],\n",
+    "                output_names=output_names,\n",
+    "                dynamic_axes=dynamic or None,\n",
+    "            )\n",
+    "        # Checks\n",
+    "        model_onnx = onnx.load(f)  # load onnx model\n",
+    "\n",
+    "        # Simplify\n",
+    "        if self.args.simplify:\n",
+    "            try:\n",
+    "                import onnxsim\n",
+    "\n",
+    "                LOGGER.info(\n",
+    "                    f\"{prefix} simplifying with onnxsim {onnxsim.__version__}...\"\n",
+    "                )\n",
+    "                model_onnx, _ = onnxsim.simplify(model_onnx)\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                LOGGER.warning(f\"{prefix} simplifier failure: {e}\")\n",
+    "\n",
+    "        # Metadata\n",
+    "        for k, v in self.metadata.items():\n",
+    "            meta = model_onnx.metadata_props.add()\n",
+    "            meta.key, meta.value = k, str(v)\n",
+    "\n",
+    "        onnx.save(model_onnx, f)\n",
+    "        return f, model_onnx\n",
+    "\n",
+    "\n",
+    "class ESP_YOLO(YOLO):\n",
+    "    def export(\n",
+    "        self,\n",
+    "        **kwargs,\n",
+    "    ):\n",
+    "        self._check_is_pytorch_model()\n",
+    "        custom = {\n",
+    "            \"imgsz\": self.model.args[\"imgsz\"],\n",
+    "            \"batch\": 1,\n",
+    "            \"data\": None,\n",
+    "            \"device\": None,\n",
+    "            \"verbose\": False,\n",
+    "        }\n",
+    "        args = {**self.overrides, **custom, **kwargs, \"mode\": \"export\"}\n",
+    "        return ESP_Detect_Exporter(overrides=args, _callbacks=self.callbacks)(\n",
+    "            model=self.model\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "model = ESP_YOLO(\"yolo11n.pt\")\n",
+    "for m in model.modules():\n",
+    "    if isinstance(m, Attention):\n",
+    "        m.forward = ESP_Attention.forward.__get__(m)\n",
+    "    if isinstance(m, Detect):\n",
+    "        m.forward = ESP_Detect.forward.__get__(m)\n",
+    "\n",
+    "model.export(format=\"onnx\", simplify=True, opset=13, dynamic=False, imgsz=640)"
    ]
   }
  ],
