yolo11n.espdl 320x320 detect me in score2

--- a/Notebooks/EsperimentiYOLO2.ipynb
+++ b/Notebooks/EsperimentiYOLO2.ipynb
@@ -154,10 +154,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "9de977a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13:32:22] PPQ Layerwise Equalization Pass Running ... 0 equalization pair(s) was found, ready to run optimization.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Layerwise Equalization: 100%|██████████| 4/4 [00:00<00:00, 108240.10it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished.\n",
+      "\u001b[31m[Warning] Unexpected input value of operation /model.11/Resize, recieving \"None\" at its input 1\u001b[0m\n",
+      "\u001b[31m[Warning] Unexpected input value of operation /model.14/Resize, recieving \"None\" at its input 1\u001b[0m\n",
+      "[13:32:23] PPQ Quantization Fusion Pass Running ...       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished.\n",
+      "[13:32:23] PPQ Quantize Simplify Pass Running ...         Finished.\n",
+      "[13:32:23] PPQ Parameter Quantization Pass Running ...    Finished.\n",
+      "[13:32:23] PPQ Runtime Calibration Pass Running ...       "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calibration Progress(Phase 1): 100%|██████████| 32/32 [00:02<00:00, 13.57it/s]\n",
+      "Calibration Progress(Phase 2): 100%|██████████| 32/32 [00:04<00:00,  7.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished.\n",
+      "[13:32:31] PPQ Quantization Alignment Pass Running ...    Finished.\n",
+      "[13:32:31] PPQ Passive Parameter Quantization Running ... Finished.\n",
+      "--------- Network Snapshot ---------\n",
+      "Num of Op:                    [219]\n",
+      "Num of Quantized Op:          [219]\n",
+      "Num of Variable:              [422]\n",
+      "Num of Quantized Var:         [422]\n",
+      "------- Quantization Snapshot ------\n",
+      "Num of Quant Config:          [684]\n",
+      "ACTIVATED:                    [257]\n",
+      "OVERLAPPED:                   [215]\n",
+      "PASSIVE:                      [194]\n",
+      "FP32:                         [18]\n",
+      "Network Quantization Finished.\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip onnx::Split_185 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_6 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_3 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_1 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip /model.10/m/m.0/attn/Concat_output_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip onnx::Split_326 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_11 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip /model.10/m/m.0/attn/Softmax_output_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_10 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip  because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_8 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_4 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip  because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_9 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_7 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_5 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_2 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip onnx::Split_185 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_6 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_3 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_1 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip /model.10/m/m.0/attn/Concat_output_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip onnx::Split_326 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_11 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip /model.10/m/m.0/attn/Softmax_output_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_10 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip  because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_8 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_4 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip  because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_9 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_7 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_5 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_2 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip onnx::Split_185 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_6 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_3 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_1 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip /model.10/m/m.0/attn/Concat_output_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip onnx::Split_326 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_11 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip /model.10/m/m.0/attn/Softmax_output_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_10 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip  because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_8 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_4 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip  because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_9 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_7 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_5 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_2 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip onnx::Split_185 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_6 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_3 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_1 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip /model.10/m/m.0/attn/Concat_output_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip onnx::Split_326 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_11 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_74 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_75 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_76 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_77 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_85 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_86 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_87 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_88 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_79 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_82 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_90 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip /model.10/m/m.0/attn/Softmax_output_0 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_93 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_94 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_95 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_96 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_104 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_105 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_106 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_107 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_98 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_101 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_109 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_10 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip  because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_8 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_4 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip  because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_9 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_7 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_5 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mSkip PPQ_Variable_2 because it's not exportable\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;2m[INFO][ESPDL][2025-08-08 13:32:31]:  \u001b[mskip not QuantableOperation\n",
+      "\u001b[38;5;3m[WARNING][ESPDL][2025-08-08 13:32:31]:  \u001b[m/model.10/m/m.0/attn/Softmax_output_0 does not bind exponents parameter\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<esp_ppq.IR.base.graph.BaseGraph at 0x16b544ad0>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#quantizzazione del modello int int8 .espdl\n",
     "import sys, os\n",
@@ -171,7 +367,7 @@
     "    num_of_bits=8,                 # quantizzazione int8\n",
     "    device='cpu',\n",
     "    batchsz=1,\n",
-    "    imgsz=[640, 640],              # deve combaciare con la dimensione del modello\n",
+    "    imgsz=[320, 320],              # deve combaciare con la dimensione del modello\n",
     "    calib_dir=\"../../calibrazione_espressif/\",        #  cartella immagini reali\n",
     "    espdl_model_path=\"yolo11n.espdl\"\n",
     ")\n"
@@ -332,7 +528,7 @@
     "    if isinstance(m, Detect):\n",
     "        m.forward = ESP_Detect.forward.__get__(m)\n",
     "\n",
-    "model.export(format=\"onnx\", simplify=True, opset=13, dynamic=False, imgsz=640)"
+    "model.export(format=\"onnx\", simplify=True, opset=13, dynamic=False, imgsz=320)"
    ]
   }
  ],
